// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Specifications inheritance > Basic 1`] = `
[
  {
    "name": "description",
    "value": "Gas mass flow controllers for flow rates",
  },
  {
    "name": "manufacture",
    "value": "Bronkhorst",
  },
]
`;

exports[`Specifications inheritance > Inherit from multiple devices 1`] = `
[
  {
    "name": "color",
    "value": "yellow",
  },
  {
    "name": "manufacture",
    "value": "Bronkhorst",
  },
  {
    "name": "description",
    "value": "Bronkhorst-Devices",
  },
]
`;

exports[`Specifications inheritance > Inherit from multiple devices 2`] = `
[
  {
    "name": "color",
    "value": "yellow",
  },
  {
    "name": "description",
    "value": "Gas mass flow controllers for flow rates",
  },
  {
    "name": "manufacture",
    "value": "Bronkhorst",
  },
]
`;

exports[`Specifications inheritance > More-Specific values should be used 1`] = `
[
  {
    "name": "description",
    "value": "Gas mass flow controllers for flow rates",
  },
  {
    "name": "manufacture",
    "value": "Bronkhorst",
  },
]
`;

exports[`closureTable > Delete Leaf 1`] = `
[
  {
    "ancestor": "0",
    "depth": 1,
    "descendant": "1",
  },
  {
    "ancestor": "0",
    "depth": 2,
    "descendant": "2",
  },
  {
    "ancestor": "1",
    "depth": 1,
    "descendant": "2",
  },
]
`;

exports[`closureTable > Delete subtree 1`] = `
[
  {
    "ancestor": "0",
    "depth": 1,
    "descendant": "1",
  },
]
`;

exports[`closureTable > Inserts into closure table 1`] = `
[
  {
    "ancestor": "0",
    "depth": 1,
    "descendant": "1",
  },
]
`;

exports[`closureTable > Inserts into closure table 2`] = `
[
  {
    "ancestor": "0",
    "depth": 1,
    "descendant": "1",
  },
  {
    "ancestor": "0",
    "depth": 2,
    "descendant": "2",
  },
  {
    "ancestor": "1",
    "depth": 1,
    "descendant": "2",
  },
]
`;

exports[`closureTable > Inserts into closure table 3`] = `
[
  {
    "ancestor": "0",
    "depth": 1,
    "descendant": "1",
  },
  {
    "ancestor": "0",
    "depth": 2,
    "descendant": "2",
  },
  {
    "ancestor": "0",
    "depth": 3,
    "descendant": "3",
  },
  {
    "ancestor": "0",
    "depth": 3,
    "descendant": "4",
  },
  {
    "ancestor": "1",
    "depth": 1,
    "descendant": "2",
  },
  {
    "ancestor": "1",
    "depth": 2,
    "descendant": "3",
  },
  {
    "ancestor": "1",
    "depth": 2,
    "descendant": "4",
  },
  {
    "ancestor": "2",
    "depth": 1,
    "descendant": "3",
  },
  {
    "ancestor": "2",
    "depth": 1,
    "descendant": "4",
  },
]
`;

exports[`closureTable > Move subtree 1`] = `
[
  {
    "ancestor": "0",
    "depth": 1,
    "descendant": "1",
  },
  {
    "ancestor": "0",
    "depth": 2,
    "descendant": "2",
  },
  {
    "ancestor": "0",
    "depth": 3,
    "descendant": "3",
  },
  {
    "ancestor": "0",
    "depth": 4,
    "descendant": "4",
  },
  {
    "ancestor": "0",
    "depth": 5,
    "descendant": "5",
  },
  {
    "ancestor": "1",
    "depth": 1,
    "descendant": "2",
  },
  {
    "ancestor": "1",
    "depth": 2,
    "descendant": "3",
  },
  {
    "ancestor": "1",
    "depth": 3,
    "descendant": "4",
  },
  {
    "ancestor": "1",
    "depth": 4,
    "descendant": "5",
  },
  {
    "ancestor": "2",
    "depth": 1,
    "descendant": "3",
  },
  {
    "ancestor": "2",
    "depth": 2,
    "descendant": "4",
  },
  {
    "ancestor": "2",
    "depth": 3,
    "descendant": "5",
  },
  {
    "ancestor": "3",
    "depth": 1,
    "descendant": "4",
  },
  {
    "ancestor": "3",
    "depth": 2,
    "descendant": "5",
  },
  {
    "ancestor": "4",
    "depth": 1,
    "descendant": "5",
  },
]
`;
